# voice-to-voice-gpt

./: CLAUDE.md  README.md  app.py  pyproject.toml  readme.md  requirements.md
audio/: capture_input.py  mic_test.py  text-to-speech_test.py  translation.py
backend/: main.py
frontend/src/: App.css  App.tsx
frontend/src/components/: AudioVisualizer.tsx  ChatDisplay.tsx
llm/: prompt.py
